@@ -1,3 +1,11 @@
+Mon Nov  3 20:11:55 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * TAO_IDL/driver/drv_mcpp_preproc.cpp:
+        * TAO_IDL/driver/drv_preproc.cpp:
+
+          Added CIAO_ROOT/ccm to include paths, this is present in the forthcoming
+          CIAO version. 
+        
 Mon Nov  3 15:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Compression/lzo/LzoCompressor.cpp:
